<resources>
    <string name="app_name">Jera Animation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Perfil</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="search">Pesquisar projeto</string>
    <string name="enter">ENTRAR</string>
    <string name="text_go">Go!</string>
    <string name="search_title">Procurando por uma empresa de desenvolvimento? \nparabéns você acabou de encontrar a
        Jera
    </string>
    <string name="star_body">Aqui realizaremos seu sonho com um app 5 estrelas</string>
    <string name="check_body">Vamos Começar?</string>
    <string name="about">No início criávamos games e apps das nossas ideias, algo parecido com as StarssStartups que
        tanto se falam hoje. Com a qualidade apresentada e eficiência de nossas operações, fomos logo procurados por
        pessoas e empresas que gostariam de fazer seus próprios aplicativos, otimizando seus recursos e tempo, sem
        perder qualidade e comprometimento.

        Em pouco tempo ficamos conhecidos pela qualidade, excelente atendimento e comprometimento da nossa equipe e cada
        vez mais criamos apps sob medida e ajudamos nossos clientes a desenvolverem seus negócios da melhor maneira
        possível.

        Quando falamos que “somos especialistas em apps” estamos expressando nosso compromisso em fazer sempre um
        excelente trabalho com os recursos disponíveis. O sucesso de nossos clientes é o nosso sucesso.
    </string>
    <string name="text_user_name">Allan Fagnane</string>
    <string name="text_user_email">allan@jera.com.br</string>
    <string name="text_about_us">Sobre nós</string>
</resources>
