<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.motion.MotionLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_home"
            app:layoutDescription="@xml/motion_scene_profile"
            tools:context=".fragments.ProfileFragment">

        <LinearLayout
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="#ffff"
                android:elevation="25dp"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/avatar"/>

            <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:text="@string/text_user_name"
                    android:textStyle="bold"/>
            <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:text="@string/text_user_email"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/about"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/card_view"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="0dp"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tag_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_about_us"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"/>

            <ImageView
                    android:id="@+id/brand_jera"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="55dp"
                    android:background="@drawable/ic_logo_jera_dark"/>

            <TextView
                    android:id="@+id/about_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:padding="@dimen/margin_16dp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:text="@string/about"/>
        </LinearLayout>
    </android.support.constraint.motion.MotionLayout>
</layout>