<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
            android:id="@+id/linear_layout_login"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Activities.LoginActivity"
            android:background="@drawable/background_home"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/brand_logo"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:background="@drawable/ic_jera"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/email"
                android:textColorHint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorAccent"
                    android:inputType="textFilter"
                    android:textColor="#ffff"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password"
                android:textColorHint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorAccent"
                    android:textColor="#ffff"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="16dp"
                android:text="@string/enter"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@drawable/button_accent"
                android:layout_marginEnd="16dp"/>

    </LinearLayout>
</layout>